# expenses-bot

./: Cargo.toml
migrations/: 20231108051933_init.sql  20231108220438_increase-id.sql  20231108225957_change_user_id_to_bigint.sql
src/: bot.rs  commands.rs  db.rs  main.rs  models.rs
