[package]
name = "expense-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-runtime = "0.31.0"
shuttle-shared-db = { version = "0.31.0", features = ["postgres"] }
shuttle-secrets = "0.31"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.26.0"
teloxide = { version = "0.12.2", features = ["macros"] }
pretty_env_logger = "0.5"
log = "0.4"
chrono = "0.4.31"
